
  23.04.2018
  deviceServiceVersion = 1013519
  
  [+] Добавлена опция fastConnect позволяющая значительно сократить время подключения
      к устройству. Работает только в связке с headerMode = 3.
  [+] Добавлена опция statisticEnabled выключение которой позволит отключить сохранение
      jpos статистики и ускорит работу драйвера.
  [*] Исправлена проблема с невозможностью подключиться к устройству, если отсутствует бумага
  [*] Исправлен месяц в дефолтном конструкторе PrinterDate, что приводило к неправильной
      дате после техобнуления.
  [*] Уменьшенов ремя подключения к устройству
  [*] Исправлена ошибка когда openFiscalDay кидал исключение, если заканчивается бумага во 
      время печати отчета об открытии смены
	  
********************************************************************************

  17.04.2018
  deviceServiceVersion = 1013518
  
  [+] Добавлен параметр в файл jpos.xml printStringDelayInMs. 
      Это задержка в миллисекундах после команд "Печать строки" и "Печать строки шрифтом"
	  
********************************************************************************

  13.04.2018
  deviceServiceVersion = 1013517
  
  [-] Исправлена ошибка при формировании чека
	  
********************************************************************************

  03.04.2018
  deviceServiceVersion = 1013516
  
  [+] В протокол 1.0 добавлено несколько попыток обращения к устройству при 
      таймауте чтения ответа на ENQ

********************************************************************************

  22.03.2018
  deviceServiceVersion = 1013515
  
  [-] Исправлена ошибка отмены позиции чека через printRecVoidItem
  
********************************************************************************

  14.03.2018
  deviceServiceVersion = 1013513
  
  [*] Исправлен баг чтения пароля при отмене документа открытого другим оператором

********************************************************************************

  08.03.2018
  deviceServiceVersion = 1013512
  