@@ -1,17 +1,7 @@
-/*
- * To change this template, choose Tools | Templates
- * and open the template in the editor.
- */
 package com.shtrih.jpos.fiscalprinter.directIO;
 
-/**
- *
- * @author V.Kravtsov
- */
-import com.shtrih.fiscalprinter.SMFiscalPrinter;
-import com.shtrih.jpos.DIOUtils;
-import com.shtrih.jpos.fiscalprinter.FiscalPrinterImpl;
 import com.shtrih.fiscalprinter.command.FSPrintCorrectionReceipt;
+import com.shtrih.jpos.fiscalprinter.FiscalPrinterImpl;
 
 public class DIOPrintCorrectionReceipt extends DIOItem {
 
@@ -25,7 +15,12 @@ public class DIOPrintCorrectionReceipt extends DIOItem {
         command.setSysPassword(service.getPrinter().getSysPassword());
         command.setOperationType((Integer) params[0]);
         command.setTotal((Long) params[1]);
-        service.getPrinter().check(service.getPrinter().fsPrintCorrectionReceipt(command));
+
+        if(getParams().autoOpenShift)
+            getPrinter().openFiscalDay();
+
+        getPrinter().execute(command);
+
         service.printDocEnd();
     }
 
