@@ -5,7 +5,6 @@
 package com.shtrih.jpos.fiscalprinter.receipt;
 
 /**
- *
  * @author V.Kravtsov
  */
 
@@ -32,37 +31,32 @@ public class ReceiptPrinterImpl implements ReceiptPrinter {
         this.printer = printer;
         this.params = params;
     }
-    
+
     public void printPreLine() throws Exception {
         if (params.preLine.length() > 0) {
             printText(params.preLine);
             params.preLine = "";
         }
     }
-   
+
     public void printPostLine() throws Exception {
         if (params.postLine.length() > 0) {
             printText(params.postLine);
             params.postLine = "";
         }
     }
-    
-    public void openReceipt(int receiptType) throws Exception 
-    {
-        if (printer.getCapOpenReceipt()) 
-        {
-            printer.openReceipt(receiptType);
-            printer.waitForPrinting();
-        }
+
+    public void openReceipt(int receiptType) throws Exception {
+        printer.openReceipt(receiptType);
     }
 
-    
+
     public void printText(String text) throws Exception {
         printer.printText(PrinterConst.SMFP_STATION_REC, text, printer
                 .getParams().getFont());
     }
 
-    
+
     public long getSubtotal() throws Exception {
         long total = 0;
         PrinterStatus status = printer.readPrinterStatus();
@@ -87,34 +81,33 @@ public class ReceiptPrinterImpl implements ReceiptPrinter {
         return S + line2;
     }
 
-    
+
     public void printStrings(String line1, String line2) throws Exception {
         printText(formatStrings(line1, line2));
     }
 
-    
+
     public SMFiscalPrinter getPrinter() throws Exception {
         return printer;
     }
 
-    
+
     public void printText(int station, String text, FontNumber font)
             throws Exception {
         printer.printText(station, text, font);
     }
 
-    
+
     public String printDescription(String description) throws Exception {
         String result = "";
         String[] lines = parseText(description);
         if (lines.length == 1) {
             result = lines[0];
-        } else 
-        {
-            for (int i = 0; i < lines.length-1; i++) {
+        } else {
+            for (int i = 0; i < lines.length - 1; i++) {
                 printText(lines[i]);
             }
-            result = lines[lines.length-1];
+            result = lines[lines.length - 1];
         }
         return result;
     }
@@ -129,22 +122,22 @@ public class ReceiptPrinterImpl implements ReceiptPrinter {
         return text;
     }
 
-    
+
     public void waitForPrinting() throws Exception {
         printer.waitForPrinting();
     }
 
-    
+
     public int getTextLength() throws Exception {
         return printer.getMessageLength();
     }
 
-    
+
     public void printSeparator(int separatorType, int height) throws Exception {
         printer.printSeparator(separatorType, height);
     }
 
-    
+
     public int getStation(int station) throws Exception {
         // check valid stations
         JposPrinterStation printerStation = new JposPrinterStation(station);
@@ -174,5 +167,5 @@ public class ReceiptPrinterImpl implements ReceiptPrinter {
                         "Zero receipts sre disabled");
             }
         }
-    }     
+    }
 }
