@@ -305,5 +305,12 @@
              
              Значение по умолчанию - 1. -->
 		<prop name="autoOpenShift" type="String" value="0"/>
+
+        <!-- Если при попытке снять Z-отчет смена закрыта, то она будет предварительно открыта.
+             Это может быть нежелательным поведением, если нужно в отчет об открытии смены
+             нужно передавать ИНН кассира.
+
+             Значение по умолчанию - 1. -->
+		<prop name="forceOpenShiftOnZReport" type="String" value="0"/>
 	</JposEntry>
 </JposEntries>
