@@ -14,6 +14,9 @@
       к устройству. Работает только в связке с headerMode = 3.
   [+] Добавлена опция statisticEnabled выключение которой позволит отключить сохранение
       jpos статистики и ускорит работу драйвера.
+  [+] Добавлена опция autoOpenShift управляющая автооткрытием смены перед началом чека.
+  [+] Добавлена опция forceOpenShiftOnZReport управляющая автооткрытием смены перед печатью 
+      Z-отчета, если смена закрыта.
   [*] Исправлена проблема с невозможностью подключиться к устройству, если отсутствует бумага
   [*] Исправлен месяц в дефолтном конструкторе PrinterDate, что приводило к неправильной
       дате после техобнуления.
